Update skills overview

--- a/index.html
+++ b/index.html
@@ -70,17 +70,23 @@
     <!--Profile-->
     <section>
       <h1>Profile</h1>
-      <p>I have been building websites for 15+ years and have more than 10 years of
-        experience working with WordPress.</p>
-      <p>In my current role as Digital Supporter & Platform Trainer, I do a lot of varied tasks. I support our users,
-        both through training and advice, guidance and documentation. I make regular front-end and back-end developer
-        changes to our in-house content publisher platforms and WordPress platforms. I've highlighted some key examples
-        <a href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Here is a quick summary of my
-        regular tasks:
-      </p>
+      <p>I have been building websites for 15+ years and have more than 10 years of experience working with WordPress.</p>
+      <p>I also have experience of working with in-house bespoke platforms and Umbraco.</p>
+      <p>In my current role as Frontend Developer, I work on a variety of sites, either building from scratch or remodelling existing templates. I work from designs which have been created in InVision or from information given in support tickets</p>
+      <p>I also have substantial experience with supporting users, through training, advice, guidance and documentation.</p>
+      <p>I've included some examples of specific projects </p><a href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm currently working on, can't be included as they are not yet live.</p>
+      <p>Recent sites which I've built or contributed to are:</p>
       <div class="tnsm-card">
         <ul>
-          <li>making front-end and back-end changes to <a href="https://www.bath.ac.uk">www.bath.ac.uk</a> and <a href="https://blogs.bath.ac.uk">blogs.bath.ac.uk</a></li>
+          <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
+          <li><a href="https://www.bath.ac.uk">University of Bath</a></li>
+          <li><a href="https://blogs.bath.ac.uk">University of Bath blog site</a></li>
+
+        </ul>
+      </div>
+      <p>Recent sites which I've built or contributed to are:</p>
+      <div class="tnsm-card">
+        <ul>
           <li>updating Apache config and implementing redirects</li>
           <li>maintaining and improving technical documentation</li>
           <li>GitLab and GitHub administration</li>
@@ -105,64 +111,69 @@
     <!--Skills summary-->
     <section>
       <h1>Skills summary</h1>
-      <h2>Technical</h2>
-      <p>I'm currently completing the Front-End Engineer, Career Path course through Codecademy Pro, mostly to
-        solidify
-        existing skills and be up to date with current practices. I've also had a varied background of roles,
-        including
-        experience with managing projects and staff.</p>
-      <p>I have substantial experience with:</p>
+      <p>I've worked on quite a few different projects, but I'll try to summarise the tools and frameworks I have experience with.</p>
+      <h2>Codebases</h2>
       <div class="tnsm-card">
         <ul>
           <li>HTML5</li>
-          <li>CSS and SCSS</li>
+          <li>CSS, SASS and SCSS</li>
           <li>JQuery and JavaScript</li>
-          <li>using CSS frameworks such as Foundation and Bootstrap</li>
-          <li>using build processes such as Grunt and Gulp with NPM and Node</li>
-          <li>testing and updating project dependencies</li>
-          <li>user experience testing</li>
-          <li>investigating and verifying errors and bugs and proposing solutions</li>
-          <li>reviewing and testing code changes by others</li>
-          <li>testing that changes meet our code standards</li>
-          <li>design tools such as Figma and Invision</li>
-          <li>GitHub and GitLab</li>
-          <li>WordPress, WordPress multisites and bespoke content management systems</li>
-          <li>keeping up to date with version changes, such as WordPress and PHP. Ensuring updates are made within the
-            supported timeframes</li>
-          <li>Shopify and WooCommerce build and maintenance</li>
+          <li>JSON</li>
+          <li>PHP</li>
+          <li>Ruby</li>
+        </ul>
+      </div>
+      <h2>Tools</h2>
+      <div class="tnsm-card">
+        <ul>
+          <li>Webpack and Gulp processing</li>
+          <li>Frameworks such as Foundation, Bootstrap, Select2 (forms), Slick (sliders)</li>
+          <li>NPM and Node.js</li>
+          <li>Design tools such as Figma and Invision</li>
+          <li>WordPress, WordPress multisites, Umbraco and bespoke content management systems</li>
+          <li>GitHub, GitLab, Beanstalk and Azure DevOps</li>
+          <li>Shopify and WooCommerce</li>
           <li>Apache config</li>
-          <li>database admin, Oracle & MySQL</li>
-          <li>constructing database queries to create reports to aid management decisions</li>
-          <li>project management</li>
-          <li>Agile framework and practice</li>
+          <li>Oracle, MariaDB & MySQL</li>
           <li>Google Tag Manager, Optimize and Analytics</li>
           <li>Adobe Creative Suite</li>
           <li>Microsoft Office and Google Workspace</li>
         </ul>
       </div>
-      <p>I also have some experience with PHP, JSON and Ruby. I regularly make changes to this code, so consider
-        myself literate. I can usually interpret the code and spot errors if reviewing work by others.</p>
+      <h2>Process</h2>
+      <div class="tnsm-card">
+        <ul>
+          <li>Estimating, tracking and evidencing task completion</li>
+          <li>Testing and updating project dependencies</li>
+          <li>User experience testing</li>
+          <li>Investigating and verifying errors and bugs and proposing solutions</li>
+          <li>Reviewing and testing code changes by others</li>
+          <li>Testing that changes meet our code standards</li>
+          <li>Keeping up to date with version changes, such as WordPress and PHP. Ensuring updates are made within the supported timeframes</li>
+          <li>Constructing database queries to create reports to aid management decisions</li>
+          <li>Project management</li>
+          <li>Agile framework and practice</li>
+          <li>pair programming</li>
+        </ul>
+      </div>
       <h2>Other</h2>
-      <p>Some other less technical skills I've developed through working in an Agile team and within the wider
-        university context include:</p>
+      <p>Some other less technical skills I've developed include:</p>
       <div class="tnsm-card">
         <ul>
           <li>management of staff and co-management of a team</li>
           <li>running team sessions such as sprint retro</li>
-          <li>pair programming</li>
           <li>documenting processes or updating existing documentation</li>
           <li>contributing to team discussions and arranging meetings</li>
           <li>collaborating with others (designers, developers, content) on shared projects</li>
-          <li>communication on various channels including support tickets, updating stories and merge requests, creating
-            guidance</li>
+          <li>communication on various channels including support tickets, updating stories and merge requests, creating guidance</li>
           <li>project planning and project management</li>
           <li>working with stakeholders</li>
           <li>meeting strict deadlines</li>
-          <li>communicating with users (with varying levels of technical experience) to understand potential feature
-            improvements, new features and bugs</li>
+          <li>communicating with users (with varying levels of technical experience) to understand potential feature improvements, new features and bugs</li>
           <li>training users to use our in-house CMS</li>
-          <li>being an active part of networks and user groups to share skills e.g. Office 365 Network and TOPdesk user
-            group</li>
+          <li>being an active part of networks and user groups to share skills e.g. Office 365 Network and TOPdesk user group</li>
+        </ul>
+      </div>
     </section>
     <!--Recent employment-->
     <section>
@@ -177,7 +188,7 @@
       <h2>Voluntary roles</h2>
       <div class="tnsm-card">
         <ul>
-          <li>2016+, Trustee, Black Swan Arts</li>
+          <li>2016 - June 2022, Trustee, Black Swan Arts</li>
           <li>2013 - 2016, Web designer, Frome Open Studios</li>
         </ul>
       </div>
