--- a/index.html
+++ b/index.html
@@ -75,10 +75,16 @@
       <p>In my current role as Frontend Developer, I work on a variety of sites, either building from scratch or remodelling existing templates. I work from designs which have been created in InVision or from information given in support tickets</p>
       <p>I also have substantial experience with supporting users, through training, advice, guidance and documentation.</p>
       <p>I've included some examples of specific projects </p><a href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm currently working on, can't be included as they are not yet live.</p>
-      <p>Recent sites which I've built or contributed to are:</p>
+      <p>Some recent sites which I have worked on include:</p>
       <div class="tnsm-card">
         <ul>
           <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
+          <li><a href="https://communitysmartgrids.org/">Oxford University, International Community for Local Smart Grids</a></li>
+          <li><a href="https://www.hartpury.ac.uk/"">Hartpury College and University</a></li>
+          <li><a href="https://www.industore.co.uk">Industore</a></li>
+          <li><a href="https://www.elmhurstenergy.co.uk">Elmhurst Energy</a></li>
+          <li><a href="https://www.penderynantiques.co.uk/">Penderyn Antiques</a></li>
+          <li><a href="https://markes.com/">Markes</a></li>
           <li><a href="https://www.bath.ac.uk">University of Bath</a></li>
           <li><a href="https://blogs.bath.ac.uk">University of Bath blog site</a></li>
 
