Update recent websites - tweak paragraphs

--- a/index.html
+++ b/index.html
@@ -70,12 +70,10 @@
     <!--Profile-->
     <section>
       <h1>Profile</h1>
-      <p>I have been building websites for 15+ years and have more than 10 years of experience working with WordPress.</p>
-      <p>I also have experience of working with in-house bespoke platforms and Umbraco.</p>
       <p>In my current role as Frontend Developer, I work on a variety of sites, either building from scratch or remodelling existing templates. I work from designs which have been created in InVision or from information given in support tickets</p>
+      <p>I have been building websites for 15+ years and have more than 10 years of experience working with WordPress. I also have experience of working with in-house bespoke platforms and Umbraco.</p>
       <p>I also have substantial experience with supporting users, through training, advice, guidance and documentation.</p>
-      <p>I've included some examples of specific projects </p><a href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm currently working on, can't be included as they are not yet live.</p>
-      <p>Some recent sites which I have worked on include:</p>
+      <p>I've included some examples of specific projects <a href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm currently working on, can't be included as they are not yet live. Some of the most recent sites which I have worked on include:</p>
       <div class="tnsm-card">
         <ul>
           <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
@@ -87,7 +85,6 @@
           <li><a href="https://markes.com/">Markes</a></li>
           <li><a href="https://www.bath.ac.uk">University of Bath</a></li>
           <li><a href="https://blogs.bath.ac.uk">University of Bath blog site</a></li>
-
         </ul>
       </div>
       <p>Recent sites which I've built or contributed to are:</p>
