Updates based on Grammarly and Hemingway App

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <section>
       <h1>Profile</h1>
       <p>In my current role as Frontend Developer, I work on a variety of sites, either building from scratch or remodelling existing templates. I work from designs which have been created in InVision or from information given in support tickets</p>
-      <p>I have been building websites for 15+ years and have more than 10 years of experience working with WordPress. I also have experience of working with in-house bespoke platforms and Umbraco.</p>
+      <p>I have been building websites for 15+ years and have more than 10 years experience working with WordPress. I also have experience of working with in-house bespoke platforms and Umbraco.</p>
       <p>I've included some examples of specific projects <a href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm currently working on, can't be included as they are not yet live. Some of the most recent sites which I have worked on include:</p>
       <div class="tnsm-card">
         <ul>
@@ -97,16 +97,14 @@
           <li>Google Analytics and Google Tag Manager set-up and data analysis</li>
         </ul>
       </div>
-      <p>I'm also a trustee for charity <a href="https://www.blackswanarts.org.uk">Black Swan Arts, Frome</a>.
-        As a volunteer, I provide:</p>
+      <p>I've just ended a 6-year trusteeship at <a href="https://www.blackswanarts.org.uk">Black Swan Arts, Frome</a>. My main duties were:</p>
       <div class="tnsm-card">
         <ul>
-          <li>web content editing for all online platforms</li>
-          <li>front-end changes and design</li>
+          <li>voting on strategic decisions for the charity and business</li>
+          <li>maintenance, design and content for all online platforms</li>
           <li>domain and DNS maintenance</li>
           <li>support and set up of PCs, laptops, iPads</li>
-          <li>implementation of project management and communication tools such as Trello, Slack and Google Shared
-            Drives</li>
+          <li>implementation of project management and communication tools such as Trello, Slack and Google Shared Drives</li>
         </ul>
       </div>
     </section>
@@ -184,7 +182,7 @@
         <ul>
           <li>May 2022+, Frontend Developer, Spindogs</li>
           <li>2018+, Digital Supporter & Platform Trainer, University of Bath</li>
-          <li>2012 - 2017, Programme Officer at University of Bath</li>
+          <li>2012 - 2017, Programme Officer at the University of Bath</li>
         </ul>
       </div>
       <h2>Voluntary roles</h2>
