--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
       <div class="tnsm-card">
         <ul>
           <li>May 2022+, Frontend Developer, Spindogs</li>
-          <li>2018+, Digital Supporter & Platform Trainer, University of Bath</li>
+          <li>2018+, Digital Supporter & Platform Trainer, the University of Bath</li>
           <li>2012 - 2017, Programme Officer at the University of Bath</li>
         </ul>
       </div>
