Update - CV portfolio with CodePen link

--- a/portfolio.html
+++ b/portfolio.html
@@ -67,9 +67,13 @@
         <h2>Some examples of my recent work.</h2>
       </div>
     </section>
+    <section>
+        <h2>Codepen</h2>
+        <p>It's hard to keep your CV up to date (we're all busy, right?!). But you can see some of my most recent demos in <a href="https://codepen.io/collection/YyZpYq">my CodePen collection</a></p>
+    </section>
     <!--Links to projects-->
     <section id="project-cards">
-      <h1>Recent projects</h1>
+      <h2>Recent projects</h2>
       <div class="grid-x">
         <div class="cell medium-6 large-4">
           <div class="card project-card">
@@ -121,7 +125,7 @@
     </section>
     <!--Components-->
     <section id="components-for-demonstration">
-      <h1>Components  and techniques for demonstration</h1>
+      <h2>Components  and techniques for demonstration</h2>
       <p>I have created some common components which were not part of any particular live project, but just to
         demonstrate some of my knowledge.</p>
       <p>As part of my ongoing Codecademy study, I'm also building up projects, which practice particular techniques or frameworks.</p>
@@ -133,7 +137,7 @@
     </section>
     <!--Recent websites-->
     <section id="web-site-builds">
-      <h1>Website builds</h1>
+      <h2>Website builds</h2>
       <p>I take on builds for individual clients, which can be on the client's preferred platform. This has tended to be
         through WordPress.</p>
       <p>I don't currently advertise due to time constraints but have built sites for client who have approached me by
