Update - CV portfolio with CodePen link

--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
       </div>
     </section>
     <section>
-        <h2>Codepen</h2>
+        <h2>CodePen</h2>
         <p>It's hard to keep your CV up to date (we're all busy, right?!). But you can see some of my most recent demos in <a href="https://codepen.io/collection/YyZpYq">my CodePen collection</a></p>
     </section>
     <!--Links to projects-->
