--- a/index.html
+++ b/index.html
@@ -70,28 +70,45 @@
     <!--Profile-->
     <section>
         <h1>Profile</h1>
-        <p>In my current role as Frontend Developer, I work on a variety of sites, either building from scratch or
+        <p>In my current role as Middleweight Frontend Developer, I work on a variety of sites, either building from scratch or
             remodelling existing templates. I work from designs which have been created in InVision or from information
             given in support tickets</p>
         <p>I have been building websites for 15+ years and have more than 10 years experience working with WordPress. I
             also have experience of working with in-house bespoke platforms and Umbraco.</p>
         <p>I've included some examples of specific projects <a
                 href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm
-            currently working on, can't be included as they are not yet live. Some of the most recent sites which I have
+            currently working on, can't be included as they are not yet live or are not public systems. Some of the most recent sites which I have
             worked on include:</p>
         <div class="tnsm-card">
+            <h2>WordPress<//h2>
             <ul>
+                <li>BECT - not live</li>
                 <li><a href="https://oldwallscollection.com/">Oldwalls</a></li>
                 <li><a href="https://www.informed.com/">Informed Solutions</a></li>
-                <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
                 <li><a href="https://communitysmartgrids.org/">Oxford University, International Community for Local Smart Grids</a></li>
-                <li><a href="https://www.hartpury.ac.uk/">Hartpury College and University</a></li>
                 <li><a href="https://www.industore.co.uk">Industore</a></li>
                 <li><a href="https://www.elmhurstenergy.co.uk">Elmhurst Energy</a></li>
                 <li><a href="https://www.penderynantiques.co.uk/">Penderyn Antiques</a></li>
-                <li><a href="https://markes.com/">Markes</a></li>
-                <li><a href="https://www.bath.ac.uk">University of Bath</a></li>
                 <li><a href="https://blogs.bath.ac.uk">University of Bath blog site</a></li>
+            </ul>
+            <h2>Umbraco</h2>
+            <ul>
+                <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
+                <li><a href="https://www.hartpury.ac.uk/">Hartpury College and University</a></li>
+                <li><a href="https://markes.com/">Markes</a></li>
+                <li>Premier Marinas - not live</li>
+
+            </ul>
+            <h2>Laravel bespoke</h2>
+            <ul>
+                <li>Harley Davdison - internal system</li>
+                <li>Triumph - internal system</li>
+                <li>Hyundai - internal system</li>
+                <li>IBOS - internal system</li>
+            </ul>
+            <h2>Ruby bespoke</h2>
+            <ul>
+                <li><a href="https://www.bath.ac.uk">University of Bath website</a></li>
             </ul>
         </div>
         <p>Recent sites which I've built or contributed to are:</p>
