--- a/index.html
+++ b/index.html
@@ -80,9 +80,10 @@
             currently working on, can't be included as they are not yet live or are not public systems. Some of the most recent sites which I have
             worked on include:</p>
         <div class="tnsm-card">
-            <h2>WordPress<//h2>
+            <h2>WordPress</h2>
             <ul>
-                <li>BECT - not live</li>
+                <li>Fritz Fryer Lighting - not yet live</li>
+                <li>BECT - not yet live</li>
                 <li><a href="https://oldwallscollection.com/">Oldwalls</a></li>
                 <li><a href="https://www.informed.com/">Informed Solutions</a></li>
                 <li><a href="https://communitysmartgrids.org/">Oxford University, International Community for Local Smart Grids</a></li>
@@ -93,10 +94,11 @@
             </ul>
             <h2>Umbraco</h2>
             <ul>
+                <li><a href="https://www.mhpa.co.uk">Milford Haven Port Authority</a></li>
                 <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
                 <li><a href="https://www.hartpury.ac.uk/">Hartpury College and University</a></li>
                 <li><a href="https://markes.com/">Markes</a></li>
-                <li>Premier Marinas - not live</li>
+                <li>Premier Marinas - not yet live</li>
 
             </ul>
             <h2>Laravel bespoke</h2>
