Update list of recently worked on sites

--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@
         <div class="tnsm-card">
             <h2>WordPress</h2>
             <ul>
-                <li>Fritz Fryer Lighting - not yet live</li>
-                <li>BECT - not yet live</li>
+                <li>Respond Healthcare - in development</li>
+                <li><a href="https://www.protokol.com">Protokol</a></li>
+                <li><a href="https://www.fritzfryer.co.uk">Fritz Fryer Lighting</a></li>
+                <li><a href="https://www.bect.co.uk">BECT</a></li>
                 <li><a href="https://oldwallscollection.com/">Oldwalls</a></li>
                 <li><a href="https://www.informed.com/">Informed Solutions</a></li>
                 <li><a href="https://communitysmartgrids.org/">Oxford University, International Community for Local Smart Grids</a></li>
