Update codepen links and project title

--- a/portfolio.html
+++ b/portfolio.html
@@ -69,11 +69,11 @@
     </section>
     <section>
         <h2>CodePen</h2>
-        <p>It's hard to keep your CV up to date (we're all busy, right?!). But you can see some of my most recent demos in <a href="https://codepen.io/collection/YyZpYq">my CodePen collection</a></p>
+        <p>It's hard to keep your CV up to date (we're all busy, right?!). But you can see some of my most recent demos in <a href="https://codepen.io/collection/YyZpYq">my CodePen collection</a>. And because my degree was in Fine Art and I still try to be a part-time artist, i've started a <a href="https://codepen.io/collection/YyRVLW">Digital artwork collection</a>.</p>
     </section>
     <!--Links to projects-->
     <section id="project-cards">
-      <h2>Recent projects</h2>
+      <h2>Projects from my previous role at the University of Bath</h2>
       <div class="grid-x">
         <div class="cell medium-6 large-4">
           <div class="card project-card">
