Update list of recently worked on sites

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
                 <li><a href="https://www.hartpury.ac.uk/">Hartpury College and University</a></li>
                 <li><a href="https://markes.com/">Markes</a></li>
-                <li>Premier Marinas - not yet live</li>
+                <li><a href="https://www.premiermarinas.com">Premier Marinas</a></li>
 
             </ul>
             <h2>Laravel bespoke</h2>
