Update projects in progress

--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <div class="tnsm-card">
             <h2>WordPress</h2>
             <ul>
+                <li>phs - in development</li>
                 <li>Respond Healthcare - in development</li>
                 <li><a href="https://www.protokol.com">Protokol</a></li>
                 <li><a href="https://www.fritzfryer.co.uk">Fritz Fryer Lighting</a></li>
@@ -105,10 +106,10 @@
             </ul>
             <h2>Laravel bespoke</h2>
             <ul>
-                <li>Harley Davdison - internal system</li>
-                <li>Triumph - internal system</li>
-                <li>Hyundai - internal system</li>
-                <li>IBOS - internal system</li>
+                <li>Harley Davdison - internal systems</li>
+                <li>Triumph - internal systems</li>
+                <li>Hyundai - internal systems</li>
+                <li>IBOS - internal systems</li>
             </ul>
             <h2>Ruby bespoke</h2>
             <ul>
