--- a/blogs.bath.html
+++ b/blogs.bath.html
@@ -15,7 +15,7 @@
     <!-- Compressed Foundation CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/css/foundation.min.css"
       integrity="sha256-ogmFxjqiTMnZhxCqVmcqTvjfe1Y/ec4WaRj/aQPvn+I=" crossorigin="anonymous">
-    <link href="./assets/css/compiled-style.css" type="text/css" rel="stylesheet">
+    <link href="./public/css/main.css" type="text/css" rel="stylesheet">
   </head>
 
   <body>
@@ -178,7 +178,7 @@
         </div>
       </div>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src="./public/js/main.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <!-- Compressed Foundation JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
