--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Compressed Foundation JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.6.3/dist/js/foundation.min.js"
         integrity="sha256-pRF3zifJRA9jXGv++b06qwtSqX1byFQOLjqa2PTEb2o=" crossorigin="anonymous"></script>
-    <link href="./assets/css/compiled-style.css" type="text/css" rel="stylesheet">
+    <link href="./public/css/main.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
@@ -272,7 +272,7 @@
             </div>
         </div>
     </footer>
-    <script src="./assets/js/script.js"></script>
+    <script src="./public/js/main.js"></script>
 </body>
 
 </html>
