Update navigation styles

--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
         <div class="tnsm-card">
             <h2>WordPress</h2>
             <ul>
-                <li>phs - in development</li>
+                <li>The Institute of Ismaili Studies</li>
+                <li>Cardiff Metropolitan University Wellbeing Platform - in development</li>
                 <li>Respond Healthcare - in development</li>
                 <li><a href="https://www.protokol.com">Protokol</a></li>
                 <li><a href="https://www.fritzfryer.co.uk">Fritz Fryer Lighting</a></li>
@@ -97,6 +98,7 @@
             </ul>
             <h2>Umbraco</h2>
             <ul>
+                <li>phs - in development</li>
                 <li><a href="https://www.mhpa.co.uk">Milford Haven Port Authority</a></li>
                 <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
                 <li><a href="https://www.hartpury.ac.uk/">Hartpury College and University</a></li>
