Add visually-hidden class

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.min.css" />
-    <title>Rosie Hart CV</title>
+    <title><span class="visually-hidden">Rosie Hart CV</span></title>
     <meta name="description" content="Rosie's latest CV">
     <meta name=”robots” content=”noindex”>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -29,7 +29,7 @@
                 <div class="header-items">
                     <div class="brand">
                         <a href="https://cv.thenotsomiserable.co.uk/">
-                            <div id="site-logo" class="logo-1-background logo-1">Rosie Hart CV</div>
+                            <div id="site-logo" class="logo-1-background logo-1"><span class="visually-hidden">Rosie Hart CV</span></div>
                         </a>
                     </div>
                     <nav class="role-nav">
