--- a/catalogues/demonstration-link.html
+++ b/catalogues/demonstration-link.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rosie Hart CV</title>
+    <title><span class="visually-hidden">Rosie Hart CV</span></title>
     <meta name="description" content="Rosie's Portfolio">
     <meta name=”robots” content=”noindex”>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -28,7 +28,7 @@
           <div class="header-items">
             <div class="brand">
               <a href="https://cv.thenotsomiserable.co.uk/">
-                <div id="site-logo" class="logo-1-background logo-1">Rosie Hart CV</div>
+                <div id="site-logo" class="logo-1-background logo-1"><span class="visually-hidden">Rosie Hart CV</span></div>
               </a>
             </div>
             <nav class="role-nav">
