Update page titles

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.min.css" />
-    <title><span class="visually-hidden">Rosie Hart CV</span></title>
+    <title>Rosie Hart CV</title>
     <meta name="description" content="Rosie's Portfolio">
     <meta name=”robots” content=”noindex”>
     <link rel="preconnect" href="https://fonts.googleapis.com">
