Updates to index page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/normalize.min.css" />
-    <title><span class="visually-hidden">Rosie Hart CV</span></title>
+    <title>CV</title>
     <meta name="description" content="Rosie's latest CV">
     <meta name=”robots” content=”noindex”>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -75,16 +75,16 @@
             given in support tickets</p>
         <p>I have been building websites for 15+ years and have more than 10 years experience working with WordPress. I
             also have experience of working with in-house bespoke platforms and Umbraco.</p>
-        <p>I've included some examples of specific projects <a
-                href"https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm
+        <p>I've included some examples of specific projects <a href="https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm
             currently working on, can't be included as they are not yet live or are not public systems. Some of the most recent sites which I have
             worked on include:</p>
         <div class="tnsm-card">
             <h2>WordPress</h2>
             <ul>
-                <li>The Institute of Ismaili Studies</li>
+                <li>Smart Energy Group - in development</li>
+                <li>The Institute of Ismaili Studies - in development</li>
                 <li>Cardiff Metropolitan University Wellbeing Platform - in development</li>
-                <li>Respond Healthcare - in development</li>
+                <li><a href="https://www.respond.co.uk/">Respond Healthcare - in development</a></li>
                 <li><a href="https://www.protokol.com">Protokol</a></li>
                 <li><a href="https://www.fritzfryer.co.uk">Fritz Fryer Lighting</a></li>
                 <li><a href="https://www.bect.co.uk">BECT</a></li>
@@ -98,7 +98,8 @@
             </ul>
             <h2>Umbraco</h2>
             <ul>
-                <li>phs - in development</li>
+                <li>The Whitehall and Industry group - in developemnt</li>
+                <li><a href="https://www.phs.co.uk/">PHS</a></li>
                 <li><a href="https://www.mhpa.co.uk">Milford Haven Port Authority</a></li>
                 <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
                 <li><a href="https://www.hartpury.ac.uk/">Hartpury College and University</a></li>
