Updates to index page

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <li>Smart Energy Group - in development</li>
                 <li>The Institute of Ismaili Studies - in development</li>
                 <li>Cardiff Metropolitan University Wellbeing Platform - in development</li>
-                <li><a href="https://www.respond.co.uk/">Respond Healthcare - in development</a></li>
+                <li><a href="https://www.respond.co.uk/">Respond Healthcare</a></li>
                 <li><a href="https://www.protokol.com">Protokol</a></li>
                 <li><a href="https://www.fritzfryer.co.uk">Fritz Fryer Lighting</a></li>
                 <li><a href="https://www.bect.co.uk">BECT</a></li>
