--- a/portfolio.html
+++ b/portfolio.html
@@ -132,56 +132,8 @@
       <p>I will be continuing to add both.</p>
       <ul>
         <li><a href="hero-component.html">Hero component</a></li>
-        <li><a href="flexbox-vs-grid/index.html"</a>Flexbox Vs Grid</li>
+        <li><a href="flexbox-vs-grid/index.html">Flexbox Vs Grid</a></li>
       </ul>
-    </section>
-    <!--Recent websites-->
-    <section id="web-site-builds">
-      <h2>Website builds</h2>
-      <p>I take on builds for individual clients, which can be on the client's preferred platform. This has tended to be
-        through WordPress.</p>
-      <p>I don't currently advertise due to time constraints but have built sites for client who have approached me by
-        word of mouth.</p>
-      <h2>Daniel Morley</h2>
-      <h3>Brief</h3>
-      <p>Create a new website for a self-employed artist. The site must include a blog and an online shop.</p>
-      <h3>Details</h3>
-      <p>Daniel needed a brand new website. His main requirements were:</p>
-      <ul>
-        <li>to provide a place to view and buy his original artwork and prints</li>
-        <li>to give his customers some insight into his practice and to let them know when and where he is exhibiting
-        </li>
-      </ul>
-      <p>We discussed a range of options including Shopify and Squarespace. We decided to use WordPress due to the
-        flexibility it allows. He wasn't sure that making online purchases would be the primary objective for his
-        customers so didn't want to focus on the site being a shop.</p>
-      <p>The project included:</p>
-      <ul>
-        <li>domain and hosting set-up</li>
-        <li>a purchased theme</li>
-        <li>online shop setup using WooCommerce</li>
-        <li>installing SSL certification</li>
-      </ul>
-      <a href="https://danielmorleyfineart.com/" class="button tnsm-button">Visit Daniel's website</a>
-      <h2>The Write Place</h2>
-      <h3>Brief</h3>
-      <p>Move existing non-profit organisation's site to a supported platform to enable responsive and accessible
-        features and SSL.</p>
-      <h3>Details</h3>
-      <p>The Write Place, a non-profit writers group had an existing site which was not responsive or accessible. They
-        had a very low budget as they do not receive regular funding. The main focus was to get the content to a
-        platform which would allow them to maintain the site themselves. They also had the pressure of time as their
-        previous hosting provider was no longer able to support their site securely.</p>
-      <p>I used a standard WordPress theme and created a child theme to allow them to give their site a bit of bespoke
-        personality.</p>
-      <p>The project included:</p>
-      <ul>
-        <li>domain transfer and hosting set-up</li>
-        <li>creation of a child theme</li>
-        <li>translating old content to a new site and improving the accessibility</li>
-        <li> installing SSL certification </li>
-      </ul>
-      <a href="https://www.writeplace.org.uk/" class="button tnsm-button">Visit The Write Place's website</a>
     </section>
 
     <footer>
