Update training with umbraco professional qualification

--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
         <h2>Recent training courses</h2>
         <div class="tnsm-card">
             <ul>
+                <li>Umbraco Professionals, 2024</li>
                 <li>Sass Essential Training, LinkedIn Learning, 2020</li>
                 <li>JavaScript Essential Training, LinkedIn Learning, 2020</li>
                 <li>JavaScript and JSON Integration Techniques, LinkedIn Learning, 2020</li>
