AMEND: CV landing page

--- a/index.html
+++ b/index.html
@@ -70,20 +70,16 @@
     <!--Profile-->
     <section>
         <h1>Profile</h1>
-        <p>In my current role as Middleweight Frontend Developer, I work on a variety of sites, either building from scratch or
-            remodelling existing templates. I work from designs which have been created in InVision or from information
-            given in support tickets</p>
-        <p>I have been building websites for 15+ years and have more than 10 years experience working with WordPress. I
-            also have experience of working with in-house bespoke platforms and Umbraco.</p>
-        <p>I've included some examples of specific projects <a href="https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio.</a> Some of the projects I'm
-            currently working on, can't be included as they are not yet live or are not public systems. Some of the most recent sites which I have
-            worked on include:</p>
+        <p>In my current role as a Middleweight Frontend Developer, I work on a variety of sites, either building from scratch or remodelling existing templates using Figma. I also conduct accessibility reviews and provide assessments and accessibility statements on behalf of Spindogs.</p>
+        <p>I have been building websites since the mid 2000s. Ihave more than 13 years experience working with WordPress and I am an <a href="https://umbraco.com/training/certified-developers/developer/?uid=41555">Umbraco Certified Professional</a>.</p>
+        <p>I've included some examples of specific projects <a href="https://cv.thenotsomiserable.co.uk/portfolio.html">in my portfolio</a>. Below is a list of sites I have worked on over the last few years:</p>
         <div class="tnsm-card">
             <h2>WordPress</h2>
             <ul>
-                <li>Smart Energy Group - in development</li>
-                <li>The Institute of Ismaili Studies - in development</li>
-                <li>Cardiff Metropolitan University Wellbeing Platform - in development</li>
+                <li>Pinnacle Housing - in development</li>
+                <li><a href="https://smartenergyhomes.co.uk/">Smart Energy Group</a></li>
+                <li><a href="https://www.iis.ac.uk/">The Institute of Ismaili Studies</a></li>
+                <li><a href="https://rwcymru.ac.uk/">Cardiff Metropolitan University Wellbeing Platform</a></li>
                 <li><a href="https://www.respond.co.uk/">Respond Healthcare</a></li>
                 <li><a href="https://www.protokol.com">Protokol</a></li>
                 <li><a href="https://www.fritzfryer.co.uk">Fritz Fryer Lighting</a></li>
@@ -98,7 +94,8 @@
             </ul>
             <h2>Umbraco</h2>
             <ul>
-                <li>The Whitehall and Industry group - in developemnt</li>
+                <li><a href="https://www.peabodynewhomes.co.uk/">Peabody New Homes</a></li>
+                <li><a href="https://www.wig.co.uk/">The Whitehall and Industry group</a></li>
                 <li><a href="https://www.phs.co.uk/">PHS</a></li>
                 <li><a href="https://www.mhpa.co.uk">Milford Haven Port Authority</a></li>
                 <li><a href="https://www.yorkshirehousing.co.uk/">Yorkshire Housing</a></li>
@@ -109,10 +106,11 @@
             </ul>
             <h2>Laravel bespoke</h2>
             <ul>
-                <li>Harley Davdison - internal systems</li>
-                <li>Triumph - internal systems</li>
-                <li>Hyundai - internal systems</li>
-                <li>IBOS - internal systems</li>
+                <li>Taskia - Pioneered Athlete Performance - gated site</li>
+                <li>Harley Davdison - gated site</li>
+                <li>Triumph - gated site</li>
+                <li>Hyundai - gated site</li>
+                <li>IBOS - gated site</li>
             </ul>
             <h2>Ruby bespoke</h2>
             <ul>
@@ -130,8 +128,7 @@
                 <li>Google Analytics and Google Tag Manager set-up and data analysis</li>
             </ul>
         </div>
-        <p>I've just ended a 6-year trusteeship at <a href="https://www.blackswanarts.org.uk">Black Swan Arts,
-                Frome</a>. My main duties were:</p>
+        <p>I completed a 6-year trusteeship at <a href="https://www.blackswanarts.org.uk">Black Swan Arts, Frome back in 2022</a>. My main duties were:</p>
         <div class="tnsm-card">
             <ul>
                 <li>voting on strategic decisions for the charity and business</li>
@@ -152,20 +149,22 @@
             <ul>
                 <li>HTML5</li>
                 <li>CSS, SASS and SCSS</li>
-                <li>JQuery and JavaScript</li>
+                <li>JavaScript, JQuery and React</li>
                 <li>JSON</li>
                 <li>PHP</li>
+                <li>C#</li>
                 <li>Ruby</li>
             </ul>
         </div>
         <h2>Tools</h2>
         <div class="tnsm-card">
             <ul>
-                <li>Webpack and Gulp processing</li>
-                <li>Frameworks such as Foundation, Bootstrap, Select2 (forms), Slick (sliders)</li>
+                <li>Vite, Webpack and Gulp processing</li>
+                <li>Frameworks such as Bootstrap, Foundation</li>
                 <li>NPM and Node.js</li>
+                <li>Web development packages including, Swiper.js, Accessible Slick, eCharts and A11y Dialog</li>
                 <li>Design tools such as Figma and Invision</li>
-                <li>WordPress, WordPress multisites, Umbraco and bespoke content management systems</li>
+                <li>WordPress, WordPress multisites, Umbraco, Laravel and bespoke content management systems</li>
                 <li>GitHub, GitLab, Beanstalk and Azure DevOps</li>
                 <li>Shopify and WooCommerce</li>
                 <li>Apache config</li>
@@ -178,8 +177,9 @@
         <h2>Process</h2>
         <div class="tnsm-card">
             <ul>
+                <li>Accessibility audits</li>
                 <li>Estimating, tracking and evidencing task completion</li>
-                <li>Testing and updating project dependencies</li>
+                <li>Maintance of project build dependencies</li>
                 <li>User experience testing</li>
                 <li>Investigating and verifying errors and bugs and proposing solutions</li>
                 <li>Reviewing and testing code changes by others</li>
@@ -189,27 +189,27 @@
                 <li>Constructing database queries to create reports to aid management decisions</li>
                 <li>Project management</li>
                 <li>Agile framework and practice</li>
-                <li>pair programming</li>
+                <li>Pair programming</li>
             </ul>
         </div>
         <h2>Other</h2>
         <p>Some other less technical skills I've developed include:</p>
         <div class="tnsm-card">
             <ul>
-                <li>management of staff and co-management of a team</li>
-                <li>running team sessions such as sprint retro</li>
-                <li>documenting processes or updating existing documentation</li>
-                <li>contributing to team discussions and arranging meetings</li>
-                <li>collaborating with others (designers, developers, content) on shared projects</li>
-                <li>communication on various channels including support tickets, updating stories and merge requests,
+                <li>Management of staff and co-management of a team</li>
+                <li>Running team sessions such as sprint retro</li>
+                <li>Documenting processes or updating existing documentation</li>
+                <li>Contributing to team discussions and arranging meetings</li>
+                <li>Collaborating with others (designers, developers, content) on shared projects</li>
+                <li>Communication on various channels including support tickets, updating stories and merge requests,
                     creating guidance</li>
-                <li>project planning and project management</li>
-                <li>working with stakeholders</li>
-                <li>meeting strict deadlines</li>
-                <li>communicating with users (with varying levels of technical experience) to understand potential
+                <li>Project planning and project management</li>
+                <li>Working with clients and stakeholders</li>
+                <li>Meeting strict deadlines</li>
+                <li>Communicating with users (with varying levels of technical experience) to understand potential
                     feature improvements, new features and bugs</li>
-                <li>training users to use our in-house CMS</li>
-                <li>being an active part of networks and user groups to share skills e.g. Office 365 Network and TOPdesk
+                <li>Training users to use our in-house CMS</li>
+                <li>Being an active part of networks and user groups to share skills e.g. Sustainability Steering Group, Office 365 Network and TOPdesk
                     user group</li>
             </ul>
         </div>
@@ -238,7 +238,7 @@
         <h2>Recent training courses</h2>
         <div class="tnsm-card">
             <ul>
-                <li>Umbraco Professionals, 2024</li>
+                <li><a href="https://umbraco.com/training/certified-developers/developer/?uid=41555">Umbraco Certified Professional, 2024</a></li>
                 <li>Sass Essential Training, LinkedIn Learning, 2020</li>
                 <li>JavaScript Essential Training, LinkedIn Learning, 2020</li>
                 <li>JavaScript and JSON Integration Techniques, LinkedIn Learning, 2020</li>
